# cobol_dms

./: CLAUDE.md  compose.uat.yml  docker-compose.yml
.claude/skills/airrails_ bce/: SKILL.md
.claude/skills/airrails_ bce-diagrams/: SKILL.md
.github/workflows/: cobol-ci.yml
cobol/: Dockerfile  dms.conf  start.sh
dms/: Dockerfile  pom.xml
dms/config/: checkstyle.xml  spotbugs-exclude.xml
docs/: ARCHITECTURE.md  TARGET-ARCHITECTURE.md
scripts/: cobol-smoke.sh  compose-smoke.sh
services/conversion/: Dockerfile  pyproject.toml
services/conversion/app/: convert.py  errors.py  main.py  textextract.py
services/conversion/tests/: test_api.py  test_convert.py  test_textextract.py
services/extraction/: Dockerfile  pyproject.toml
services/extraction/app/: auth.py  llm.py  main.py  models.py  parsing.py  prompt.py
services/extraction/tests/: conftest.py  test_api.py  test_llm.py  test_parsing.py  test_prompt.py
src/: 00HTTPC0.cob  00HTTPR0.cpy  00JSONC0.cob  00JSONC1.cob  00MPARC0.cob  00STORC0.cob  00TIMEC0.cob  00UUIDC0.cob  10AUDTE0.cob  10AUDTR0.cpy  10AUTHC0.cob  10USERC0.cob  20MEMBB0.cob  20MEMBE0.cob  20MEMBR0.cpy  20ORGSB0.cob  20ORGSC0.cob  20ORGSE0.cob  20ORGSR0.cpy  20USRSB0.cob  20USRSE0.cob  20USRSR0.cpy  30AKTBC0.cob  30AKTEB0.cob  30AKTEE0.cob  30AKTER0.cpy  30CLASB0.cob  30CLASE0.cob  30CLASR0.cpy  30CONFB0.cob  30DOCSB0.cob  30DOCSE0.cob  30DOCSR0.cpy  30FPRFE0.cob  30FPRFR0.cpy  30INTNE0.cob  30INTNR0.cpy  30METAB0.cob  30METAC0.cob  30METAE0.cob  (+23 more)
web/: index.html
web/css/: app.css
web/js/: api.js  app.js  ui.js
(+151 files in other folders)
