[project]
name = "dms-conversion-service"
version = "1.0.0"
description = "Cloud DMS conversion service: normalizes uploads to PDF/A (with OCR) and extracts the plain text"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "ocrmypdf>=16.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.5",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
